Avance de proyecto, falta agragar enlaces, agregar footer y realizar cambios visuales

--- a/index.html
+++ b/index.html
@@ -16,13 +16,36 @@
       </ul>
     </nav>
     <section id="welcome-section">
-      <h1>Hi!,</h1>
-      <h2>I am Gonzalo Meneses,</h2>
-      <h3>Web Developer</h3>
+      <h1>Hi!, I'm Gonzalo Meneses</h1>
+      <p>Web Developer</p>
     </section>
     <section id="projects">
+      <h2><ins>Projects</ins></h2>
       <div class="project-tile">
-        <a href="http://"></a>
+        <div class="section-page">
+          <picture>
+            <source srcset="images/survey.webp" type="image/webp" />
+            <source srcset="images/survey.png" type="image/png" />
+            <a href=""
+              ><img loading="lazy" src="images/survey.png" alt="Survey example"
+            /></a>
+          </picture>
+          <a href="http://">Survey Form</a>
+        </div>
+        <div class="section-page">
+          <picture>
+            <source srcset="images/technical.webp" type="image/webp" />
+            <source srcset="images/technical.png" type="image/png" />
+            <a href=""
+              ><img
+                loading="lazy"
+                src="images/technical.png"
+                alt="Survey example"
+              />
+            </a>
+          </picture>
+          <a href="http://">Technical Page</a>
+        </div>
       </div>
     </section>
   </body>
