Se agrega contacto, solo para finalizar certificación, falta modificar para que sea full responsive

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
+    <title>FCC Portfolio Page - Example</title>
   </head>
   <body>
     <nav id="navbar">
@@ -20,33 +20,35 @@
       <p>Web Developer</p>
     </section>
     <section id="projects">
-      <h2><ins>Projects</ins></h2>
+      <h2>Projects</h2>
       <div class="project-tile">
         <div class="section-page">
+          <a href="https://gmenesesdev.github.io/fcc_surveyform/" target="_blank">
           <picture>
             <source srcset="images/survey.webp" type="image/webp" />
             <source srcset="images/survey.png" type="image/png" />
-            <a href=""
-              ><img loading="lazy" src="images/survey.png" alt="Survey example"
-            /></a>
+            <img loading="lazy" src="images/survey.png" alt="Survey example"/>
           </picture>
-          <a href="http://">Survey Form</a>
+          <p>Survey Form</p>
+          </a>
         </div>
         <div class="section-page">
+          <a href="https://gmenesesdev.github.io/fcc_TechnicalPage/" target="_blank"">
           <picture>
             <source srcset="images/technical.webp" type="image/webp" />
             <source srcset="images/technical.png" type="image/png" />
-            <a href=""
-              ><img
-                loading="lazy"
-                src="images/technical.png"
-                alt="Survey example"
-              />
-            </a>
+            <img loading="lazy" src="images/technical.png" alt="Survey example"/>
           </picture>
-          <a href="http://">Technical Page</a>
+          <p>Technical Page</p>
+          </a>
         </div>
       </div>
     </section>
+    <section id="contact">
+      <h3>Contact Me</h3>
+      <a href="https://github.com/gmenesesdev" target="_blank" id="profile-link"><img src="/images/github-svgrepo-com.svg" alt="github link">Github</a>
+    </section>
+    <footer class="footer-section">
+    </footer>
   </body>
 </html>
